--- a/Part 1/index.html
+++ b/Part 1/index.html
@@ -1,8 +1,12 @@
+
+<!DOCTYPE HTML>
+<html lang="es">
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title></title>
+    <title>Parcial 1</title>
+    <meta name="description"content="basic html">
     <link href="./index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
