--- a/Part 3/index.html
+++ b/Part 3/index.html
@@ -57,6 +57,11 @@ function challenge2()
     }
 }
 
+var Dog = new Object(nombre,color,raza);
+
+var pepe = new Dog("pepe","blanco","chihuhua");
+var javier = new Dog("javier","blanco","corgy");
+var firu = new Dog("firu","blanco","danes");
 
 /*
 
